# OutlierDetector

./: .env.example  .gitignore  .pre-commit-config.yaml  =1.3.0  CHANGELOG.md  DECISIONS.md  JOURNAL.md  LEARNING_PLAN.md  QUICK_START.md  README.md  SPEC.md  STATUS.md  STRATEGY.md  TELEGRAM_TEST_REPORT_2026-04-04.md  TELEGRAM_TEST_REPORT_2026-04-05.md  TRADINGVIEW_INTEGRATION.md  alerting.py  alerts.py  benchmark.py  claude.md  config.env  config.py  database.py  display_narrative_timeline.py  downloaded_coins.txt  exchange.py  indicators.py  main.py  original_coins.txt  pyproject.toml  replay.py  report.py  requirements.txt  run_daily.sh  signal_engine.py  signals.sqlite3-shm  signals.sqlite3-wal  smoke.py  state.py  universe.py  (+1 more)
.claude/: settings.local.json
data/: AAVE_5m_ohlcv.parquet  ADA_5m_ohlcv.parquet  ALGO_5m_ohlcv.parquet  APT_5m_ohlcv.parquet  ARB_5m_ohlcv.parquet  ATOM_5m_ohlcv.parquet  AVAX_5m_ohlcv.parquet  BCH_5m_ohlcv.parquet  BNB_5m_ohlcv.parquet  BONK_5m_ohlcv.parquet  BTC_5m_ohlcv.parquet  CAKE_5m_ohlcv.parquet  CRV_5m_ohlcv.parquet  DOGE_5m_ohlcv.parquet  DOT_5m_ohlcv.parquet  DYDX_5m_ohlcv.parquet  ENA_5m_ohlcv.parquet  ENJ_5m_ohlcv.parquet  ENS_5m_ohlcv.parquet  ETC_5m_ohlcv.parquet  ETHFI_5m_ohlcv.parquet  ETH_5m_ohlcv.parquet  FARTCOIN_5m_ohlcv.parquet  FIL_5m_ohlcv.parquet  FLOKI_5m_ohlcv.parquet  FLOW_5m_ohlcv.parquet  GALA_5m_ohlcv.parquet  GRT_5m_ohlcv.parquet  HBAR_5m_ohlcv.parquet  HYPE_5m_ohlcv.parquet  ICP_5m_ohlcv.parquet  IMX_5m_ohlcv.parquet  INJ_5m_ohlcv.parquet  JUP_5m_ohlcv.parquet  LDO_5m_ohlcv.parquet  LINK_5m_ohlcv.parquet  LTC_5m_ohlcv.parquet  MKR_5m_ohlcv.parquet  MORPHO_5m_ohlcv.parquet  NEAR_5m_ohlcv.parquet  (+23 more)
deploy/: SOAK_RUN.md  outlier-detector.service  production.env.example
narrative_data/: AAVE_1h_ohlcv.parquet  ADA_1h_ohlcv.parquet  ALGO_1h_ohlcv.parquet  APT_1h_ohlcv.parquet  ARB_1h_ohlcv.parquet  ATOM_1h_ohlcv.parquet  AVAX_1h_ohlcv.parquet  BCH_1h_ohlcv.parquet  BNB_1h_ohlcv.parquet  BONK_1h_ohlcv.parquet  BTC_1h_ohlcv.parquet  CAKE_1h_ohlcv.parquet  CRV_1h_ohlcv.parquet  DOGE_1h_ohlcv.parquet  DOT_1h_ohlcv.parquet  DYDX_1h_ohlcv.parquet  ENA_1h_ohlcv.parquet  ENJ_1h_ohlcv.parquet  ENS_1h_ohlcv.parquet  ETC_1h_ohlcv.parquet  ETHFI_1h_ohlcv.parquet  ETH_1h_ohlcv.parquet  FIL_1h_ohlcv.parquet  FLOKI_1h_ohlcv.parquet  FLOW_1h_ohlcv.parquet  GALA_1h_ohlcv.parquet  GRT_1h_ohlcv.parquet  HBAR_1h_ohlcv.parquet  ICP_1h_ohlcv.parquet  IMX_1h_ohlcv.parquet  INJ_1h_ohlcv.parquet  JUP_1h_ohlcv.parquet  LDO_1h_ohlcv.parquet  LINK_1h_ohlcv.parquet  LTC_1h_ohlcv.parquet  MKR_1h_ohlcv.parquet  NEAR_1h_ohlcv.parquet  PENDLE_1h_ohlcv.parquet  PEPE_1h_ohlcv.parquet  PYTH_1h_ohlcv.parquet  (+17 more)
scripts/: OutlierDetector_Task.xml  README.md  README_AUTOMATION.md  TASK_SCHEDULER_SETUP.md  install_task.bat  run_daily.bat  run_daily.ps1  run_daily_scheduled.bat
src/: binance_derivatives.py  binance_downloader.py  binance_futures_client.py  (+12 more)
(+12 files in other folders)
