[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlier-detector"
version = "0.1.0"
description = "Real-time crypto signal detection system for volatility-adjusted breakout detection."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11,<4.0",
    "certifi>=2024.0.0",
    "numpy>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
